feat: add new fields to formdata
