# controllers/s3_controller.go
@@ -3,15 +3,13 @@ package controllers
 import (
 	"context"
 	"fmt"
+	"os"
 
 	logFi "github.com/gofiber/fiber/v2/log"
-
-	"os"
 
 	"github.com/gofiber/fiber/v2"
 	"github.com/minio/minio-go/v7"
 	"github.com/nats-io/nats.go/jetstream"
-	"github.com/oklog/ulid/v2"
 )
 
 // @Summary		UploadFile return file with bucket name
@@ -20,20 +18,60 @@ import (
 // @Accept		json
 // @Produce		json
 // @Param		fileUpload		formData	file					true	"path to upload formData file"
+// @Param		userId		formData	string					true	"id of user"
+// @Param		recordId		formData	string					true	"id of record"
+// @Param		timestamp		formData	string					true	"timestamp of batch"
 // @Success		200				{object}	entities.InfoFile
 // @Failure		400				{object}	entities.ServerError
 // @Failure		500				{object}	entities.ServerError
-// @Router		/api/v1/upload	[post]
+// @Router		/upload	[post]
 func UploadFile(m *minio.Client, js jetstream.JetStream) func(c *fiber.Ctx) error {
 	return func(c *fiber.Ctx) error {
 		ctx := context.Background()
 		bucketName := os.Getenv("MINIO_BUCKET")
+
 		file, err := c.FormFile("fileUpload")
 		if err != nil {
 			logFi.Error("UploadFile")
 			return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
 				"error": true,
 				"msg":   err.Error(),
+			})
+		}
+
+		form, err := c.MultipartForm()
+		if err != nil {
+			logFi.Error("MultipartForm")
+			return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+				"error": true,
+				"msg":   err.Error(),
+			})
+		}
+
+		userId, ok := form.Value["userId"]
+		if !ok || len(userId) < 1 {
+			logFi.Error("userId")
+			return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+				"error": true,
+				"msg":   "field userId required",
+			})
+		}
+
+		recordId, ok := form.Value["recordId"]
+		if !ok || len(recordId) < 1 {
+			logFi.Error("recordId")
+			return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+				"error": true,
+				"msg":   "field recordId required",
+			})
+		}
+
+		timestamp, ok := form.Value["timestamp"]
+		if !ok || len(timestamp) < 1 {
+			logFi.Error("timestamp")
+			return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+				"error": true,
+				"msg":   "field timestamp required",
 			})
 		}
 
@@ -47,7 +85,7 @@ func UploadFile(m *minio.Client, js jetstream.JetStream) func(c *fiber.Ctx) erro
 		}
 		defer buffer.Close()
 
-		objectName := fmt.Sprintf("%s-%s", ulid.Make(), file.Filename)
+		objectName := fmt.Sprintf("%s-%s-%s-%s", userId[0], recordId[0], timestamp[0], file.Filename)
 		fileBuffer := buffer
 		contentType := file.Header["Content-Type"][0]
 		fileSize := file.Size
